--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
                 <h4>Call to Action! It's time</h4>
                 <p>Sign up to avail our services by clicking the button!</p>
             </div>
-            <button class="btn-border">Sign Up</button>
+            <div class="btn-container">
+                <button class="btn-border">Sign Up</button>
+            </div>
         </div>
     </section>
     <footer>
